--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,15 +42,26 @@ jobs:
           inputs: |
             ./dist/*.tar.gz
             ./dist/*.whl
-      - name: Create release
-        shell: bash
-        run: |
-          git config --global user.name "semantic-release (via Github actions)"
-          git config --global user.email "semantic-release@github-actions"
-          semantic-release version
-          semantic-release publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Python Semantic Release
+        id: release
+        uses: python-semantic-release/python-semantic-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Publish package distributions to PyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      # - name: Create release
+      #   shell: bash
+      #   run: |
+      #     git config --global user.name "semantic-release (via Github actions)"
+      #     git config --global user.email "semantic-release@github-actions"
+      #     semantic-release version
+      #     semantic-release publish
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Download all the dists
       #   uses: actions/download-artifact@v3
       #   with:
