--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
       contents: write
       packages: write
       id-token: write
-
+    environment:
+      name: release
+      url: https://pypi.org/p/tmp-python-sample-yn1205
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -51,8 +53,10 @@ jobs:
         uses: python-semantic-release/upload-to-gh-release@v9.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Publish package distributions to PyPI
-      #   uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
       # - name: Create release
       #   shell: bash
       #   run: |
