--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  github-release:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -40,21 +40,47 @@ jobs:
         run: |
           make build
           ls dist
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+
+  publish-to-github:
+    name: Publish Python 🐍 distribution 📦 to GitHub
+    needs:
+      - build
+    runs-on: ubuntu-latest
+
+    environment:
+      name: testpypi
+      url: https://pypi.org/p/tmp-python-sample-yn1205
+
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
       - name: Sign the dists with Sigstore
         uses: sigstore/gh-action-sigstore-python@v3.0.0
         with:
           inputs: |
             ./dist/*.tar.gz
             ./dist/*.whl
-      - name: Store the distribution packages
-        uses: actions/upload-artifact@v3
+          release-signing-artifacts: true
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@v9.8.0
         with:
-          name: python-package-distributions
-          path: dist/
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
-      - github-release
+      - build
     runs-on: ubuntu-latest
 
     environment:
