--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,27 +24,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-      - name: Install build tools
-        run: |
-          make install-dev
-      - name: Python Semantic Release
-        id: release
-        uses: python-semantic-release/python-semantic-release@v9.8.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build
-        run: |
-          make build
-          ls dist
-      - name: Store the distribution packages
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist/
+      # - name: Set up Python 3.10
+      #   uses: actions/setup-python@v5
+      #   with:
+      #     python-version: '3.10'
+      # - name: Install build tools
+      #   run: |
+      #     make install-dev
+      # - name: Python Semantic Release
+      #   id: release
+      #   uses: python-semantic-release/python-semantic-release@v9.8.0
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Build
+      #   run: |
+      #     make build
+      #     ls dist
+      # - name: Store the distribution packages
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: python-package-distributions
+      #     path: dist/
 
   publish-to-github:
     name: Publish to GitHub
@@ -60,57 +60,61 @@ jobs:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
-      - name: Download all the dists
-        uses: actions/download-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist/
-      - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v3.0.0
-        with:
-          inputs: |
-            ./dist/*.tar.gz
-            ./dist/*.whl
-          release-signing-artifacts: true
-      - name: Create GitHub Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: >-
-          gh release create
-          '${{ github.ref_name }}'
-          --repo '${{ github.repository }}'
-          --notes ""
-      - name: Upload artifact signatures to GitHub Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # Upload to GitHub Release using the `gh` CLI.
-        # `dist/` contains the built packages, and the
-        # sigstore-produced signatures and certificates.
-        run: >-
-          gh release upload
-          '${{ github.ref_name }}' dist/**
-          --repo '${{ github.repository }}'
+      - name: ls
+        run: |
+          pwd
+          ls -l
+      # - name: Download all the dists
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: python-package-distributions
+      #     path: dist/
+      # - name: Sign the dists with Sigstore
+      #   uses: sigstore/gh-action-sigstore-python@v3.0.0
+      #   with:
+      #     inputs: |
+      #       ./dist/*.tar.gz
+      #       ./dist/*.whl
+      #     release-signing-artifacts: true
+      # - name: Create GitHub Release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: >-
+      #     gh release create
+      #     '${{ github.ref_name }}'
+      #     --repo '${{ github.repository }}'
+      #     --notes ""
+      # - name: Upload artifact signatures to GitHub Release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   # Upload to GitHub Release using the `gh` CLI.
+      #   # `dist/` contains the built packages, and the
+      #   # sigstore-produced signatures and certificates.
+      #   run: >-
+      #     gh release upload
+      #     '${{ github.ref_name }}' dist/**
+      #     --repo '${{ github.repository }}'
 
-  publish-to-testpypi:
-    name: Publish to TestPyPI
-    needs:
-      - build
-    runs-on: ubuntu-latest
+  # publish-to-testpypi:
+  #   name: Publish to TestPyPI
+  #   needs:
+  #     - build
+  #   runs-on: ubuntu-latest
 
-    environment:
-      name: testpypi
-      url: https://pypi.org/p/tmp-python-sample-yn1205
+  #   environment:
+  #     name: testpypi
+  #     url: https://pypi.org/p/tmp-python-sample-yn1205
 
-    permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
+  #   permissions:
+  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-    steps:
-      - name: Download all the dists
-        uses: actions/download-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist/
-      - name: Publish distribution 📦 to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
+  #   steps:
+  #     - name: Download all the dists
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: python-package-distributions
+  #         path: dist/
+  #     - name: Publish distribution 📦 to TestPyPI
+  #       uses: pypa/gh-action-pypi-publish@release/v1
+  #       with:
+  #         repository-url: https://test.pypi.org/legacy/
