--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      # - name: Set up Python 3.10
-      #   uses: actions/setup-python@v5
-      #   with:
-      #     python-version: '3.10'
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
       # - name: Install build tools
       #   run: |
       #     make install-dev
@@ -60,7 +60,7 @@ jobs:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
-      - name: ls
+      - name: Build
         run: |
           pwd
           ls -l
@@ -76,24 +76,6 @@ jobs:
       #       ./dist/*.tar.gz
       #       ./dist/*.whl
       #     release-signing-artifacts: true
-      # - name: Create GitHub Release
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: >-
-      #     gh release create
-      #     '${{ github.ref_name }}'
-      #     --repo '${{ github.repository }}'
-      #     --notes ""
-      # - name: Upload artifact signatures to GitHub Release
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   # Upload to GitHub Release using the `gh` CLI.
-      #   # `dist/` contains the built packages, and the
-      #   # sigstore-produced signatures and certificates.
-      #   run: >-
-      #     gh release upload
-      #     '${{ github.ref_name }}' dist/**
-      #     --repo '${{ github.repository }}'
 
   # publish-to-testpypi:
   #   name: Publish to TestPyPI
