--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,23 +28,23 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      # - name: Install build tools
-      #   run: |
-      #     make install-dev
-      # - name: Python Semantic Release
-      #   id: release
-      #   uses: python-semantic-release/python-semantic-release@v9.8.0
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Build
-      #   run: |
-      #     make build
-      #     ls dist
-      # - name: Store the distribution packages
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: python-package-distributions
-      #     path: dist/
+      - name: Install build tools
+        run: |
+          make install-dev
+      - name: Python Semantic Release
+        id: release
+        uses: python-semantic-release/python-semantic-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build
+        run: |
+          make build
+          ls dist
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
 
   publish-to-github:
     name: Publish to GitHub
@@ -60,43 +60,46 @@ jobs:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
-      - name: Build
-        run: |
-          pwd
-          ls -l
-      # - name: Download all the dists
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: python-package-distributions
-      #     path: dist/
-      # - name: Sign the dists with Sigstore
-      #   uses: sigstore/gh-action-sigstore-python@v3.0.0
-      #   with:
-      #     inputs: |
-      #       ./dist/*.tar.gz
-      #       ./dist/*.whl
-      #     release-signing-artifacts: true
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Sign the dists with Sigstore
+        uses: sigstore/gh-action-sigstore-python@v3.0.0
+        with:
+          inputs: |
+            ./dist/*.tar.gz
+            ./dist/*.whl
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  # publish-to-testpypi:
-  #   name: Publish to TestPyPI
-  #   needs:
-  #     - build
-  #   runs-on: ubuntu-latest
+  publish-to-testpypi:
+    name: Publish to TestPyPI
+    needs:
+      - build
+    runs-on: ubuntu-latest
 
-  #   environment:
-  #     name: testpypi
-  #     url: https://pypi.org/p/tmp-python-sample-yn1205
+    environment:
+      name: testpypi
+      url: https://pypi.org/p/tmp-python-sample-yn1205
 
-  #   permissions:
-  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-  #   steps:
-  #     - name: Download all the dists
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: python-package-distributions
-  #         path: dist/
-  #     - name: Publish distribution 📦 to TestPyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         repository-url: https://test.pypi.org/legacy/
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Publish distribution 📦 to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
