--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
   build:
     name: Semantic versioning and Build
     runs-on: ubuntu-latest
+    outputs:
+      release-tag: ${{ steps.release.outputs.tag }}
     permissions:
       contents: write
     steps:
@@ -76,11 +78,12 @@ jobs:
         uses: python-semantic-release/upload-to-gh-release@v9.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{needs.build.outputs.release-tag}}
 
   publish-to-testpypi:
     name: Publish to TestPyPI
     needs:
-      - build
+      - publish-to-github
     runs-on: ubuntu-latest
 
     environment:
@@ -101,10 +104,33 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
 
+  test:
+    name: Integration Test
+    needs:
+      - build
+      - publish-to-testpypi
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{needs.build.outputs.release-tag}}
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: Install
+        run: |
+          pip install tmp-python-sample-yn1205==${{needs.build.outputs.release-tag}}
+          pip pytest
+      - name: Run test
+        run: make it
+
   publish-to-pypi:
     name: Publish to PyPI
     needs:
-      - build
+      - test
     runs-on: ubuntu-latest
 
     environment:
