--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,7 +124,7 @@ jobs:
         run: |
           tag=${{needs.build.outputs.release-tag}}
           pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${tag:1}
-          pip pytest
+          pip install pytest
       - name: Run test
         run: make it
 
