--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-tag: ${{ steps.release.outputs.tag }}
+      version-tag: ${{ steps.release.outputs.version }}
     permissions:
       contents: write
     steps:
@@ -127,8 +128,7 @@ jobs:
           python-version: '3.10'
       - name: Install
         run: |
-          tag=${{needs.build.outputs.release-tag}}
-          pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${tag:1}
+          pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${{needs.build.outputs.version-tag}}
           pip install pytest
       - name: Run test
         run: make it
