--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-tag: ${{ steps.release.outputs.tag }}
-      version-tag: ${{ steps.release.outputs.version }}
+      release-version: ${{ steps.release.outputs.version }}
     permissions:
       contents: write
     steps:
@@ -128,7 +128,8 @@ jobs:
           python-version: '3.10'
       - name: Install
         run: |
-          pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${{needs.build.outputs.version-tag}}
+          version=${{needs.build.outputs.release-version}}
+          pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${version/-rc./rc}
           pip install pytest
       - name: Run test
         run: make it
