--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,8 +127,8 @@ jobs:
             count=$(($count+1))
             echo "Check if ${version} is available or not ...$count"
             pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
-            [[ $? -eq 0 ]] && break
-            [[ $count -gt 10 ]] && echo "Not found ${version}" && exit 1
+            [[ "$?" -eq 0 ]] && break
+            [[ "$count" -gt 1 ]] && echo "Not found ${version}" && exit 1
             sleep 5
           done
           pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
