--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,3 +162,6 @@ jobs:
             [[ "$count" -gt 1 ]] && echo "Not found ${version}" && exit 1
             sleep 5
           done
+          pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
+          pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${version}
+          pip install pytest
