--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,12 +157,8 @@ jobs:
           while :; do
             count=$(($count+1))
             echo "Check if ${version} is available or not ...$count"
-            pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
-            [[ "$?" -eq 0 ]] && break
-            if [[ "$count" -gt 5 ]];then
-              echo "Not found ${version}"
-              exit 1
-            fi
+            [[ pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version} -eq 0 ]] && break
+            [[ "$count" -gt 5 ]] && echo "Not found ${version}" && exit 1
             sleep 5
           done
           pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
