--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,145 +13,114 @@ on:
   workflow_dispatch:
 
 jobs:
-  # build:
-  #   name: Build with semantic versioning
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     release-tag: ${{ steps.release.outputs.tag }}
-  #     release-version: ${{ steps.release.outputs.version }}
-  #   permissions:
-  #     contents: write
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Set up Python 3.10
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.10'
-  #     - name: Install build tools
-  #       run: |
-  #         make install-dev
-  #     - name: Python Semantic Release
-  #       id: release
-  #       uses: python-semantic-release/python-semantic-release@v9.8.0
-  #       with:
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         prerelease: ${{ github.event.inputs.prerelease }}
-  #     - name: Build
-  #       run: |
-  #         make build
-  #     - name: Store the distribution packages
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: python-package-distributions
-  #         path: dist/
+  build:
+    name: Build with semantic versioning
+    runs-on: ubuntu-latest
+    outputs:
+      release-tag: ${{ steps.release.outputs.tag }}
+      release-version: ${{ steps.release.outputs.version }}
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: Install build tools
+        run: |
+          make install-dev
+      - name: Python Semantic Release
+        id: release
+        uses: python-semantic-release/python-semantic-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: ${{ github.event.inputs.prerelease }}
+      - name: Build
+        run: |
+          make build
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
 
-  # publish-to-github:
-  #   name: Publish to GitHub
-  #   needs:
-  #     - build
-  #   runs-on: ubuntu-latest
+  publish-to-github:
+    name: Publish to GitHub
+    needs:
+      - build
+    runs-on: ubuntu-latest
 
-  #   permissions:
-  #     contents: write
-  #     packages: write
-  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+    permissions:
+      contents: write
+      packages: write
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-  #   steps:
-  #     - name: Download all the dists
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: python-package-distributions
-  #         path: dist/
-  #     - name: Sign the dists with Sigstore
-  #       uses: sigstore/gh-action-sigstore-python@v3.0.0
-  #       with:
-  #         inputs: |
-  #           ./dist/*.tar.gz
-  #           ./dist/*.whl
-  #     - name: Upload package distributions to GitHub Releases
-  #       run: gh release upload ${{needs.build.outputs.release-tag}} ./dist/*
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         GH_REPO: ${{ github.REPOSITORY }}
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Sign the dists with Sigstore
+        uses: sigstore/gh-action-sigstore-python@v3.0.0
+        with:
+          inputs: |
+            ./dist/*.tar.gz
+            ./dist/*.whl
+      - name: Upload package distributions to GitHub Releases
+        run: gh release upload ${{needs.build.outputs.release-tag}} ./dist/*
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.REPOSITORY }}
 
-  # publish-to-testpypi:
-  #   name: Publish to TestPyPI
-  #   needs:
-  #     - build
-  #     - publish-to-github
-  #   runs-on: ubuntu-latest
+  publish-to-testpypi:
+    name: Publish to TestPyPI
+    needs:
+      - build
+      - publish-to-github
+    runs-on: ubuntu-latest
 
-  #   environment:
-  #     name: testpypi
-  #     url: https://pypi.org/p/tmp-python-sample-yn1205
+    environment:
+      name: testpypi
+      url: https://pypi.org/p/tmp-python-sample-yn1205
 
-  #   permissions:
-  #     id-token: write  # IMPORTANT: mandatory for trusted publishing
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
 
-  #   steps:
-  #     - name: Download the distributions from release
-  #       run: gh release download ${{needs.build.outputs.release-tag}} -D dist -p '*.tar.gz' -p '*.whl'
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         GH_REPO: ${{ github.REPOSITORY }}
-  #     - name: Publish distribution 📦 to TestPyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         repository-url: https://test.pypi.org/legacy/
+    steps:
+      - name: Download the distributions from release
+        run: gh release download ${{needs.build.outputs.release-tag}} -D dist -p '*.tar.gz' -p '*.whl'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.REPOSITORY }}
+      - name: Publish distribution 📦 to TestPyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
 
-  # test:
-  #   name: Integration Test
-  #   needs:
-  #     - build
-  #     - publish-to-testpypi
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         ref: ${{needs.build.outputs.release-tag}}
-  #     - name: Set up Python 3.10
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.10'
-  #     - name: Install
-  #       run: |
-  #         version=${{needs.build.outputs.release-version}}
-  #         version=${version/-rc./rc}
-  #         count=0
-  #         while :; do
-  #           count=$(($count+1))
-  #           echo "Check if ${version} is available or not ...$count"
-  #           pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
-  #           [[ "$?" -eq 0 ]] && break
-  #           [[ "$count" -gt 1 ]] && echo "Not found ${version}" && exit 1
-  #           sleep 5
-  #         done
-  #         pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
-  #         pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${version}
-  #         pip install pytest
-  #     - name: Run test
-  #       run: make it
-  debug:
-    name: Debug
+  test:
+    name: Integration Test
+    needs:
+      - build
+      - publish-to-testpypi
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v0.26.2
+          ref: ${{needs.build.outputs.release-tag}}
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       - name: Install
         run: |
-          version=0.26.3
+          version=${{needs.build.outputs.release-version}}
           version=${version/-rc./rc}
           count=0
           while :; do
@@ -166,3 +135,5 @@ jobs:
           pip index versions -i https://test.pypi.org/simple/ tmp-python-sample-yn1205 | grep ${version}
           pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple tmp-python-sample-yn1205==${version}
           pip install pytest
+      - name: Run test
+        run: make it
