--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Python Semantic Release
+        id: release
+        uses: python-semantic-release/python-semantic-release@v9.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check release
+        if: steps.release.outputs.released == 'false'
+        run: |
+          echo 'No release will be made'
+          exit 1
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
@@ -33,12 +43,6 @@ jobs:
       - name: Install build tools
         run: |
           make install-dev
-      - name: Python Semantic Release
-        id: release
-        uses: python-semantic-release/python-semantic-release@v9.8.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          prerelease: ${{ github.event.inputs.prerelease }}
       - name: Build
         run: |
           make build
